eksctl/linuxtips/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app1
  name: app1
spec:
  replicas: 20
  selector:
    matchLabels:
      app: app1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: dockersamples/static-site
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 300m
            memory: "300Mi"
          requests:
            cpu: 250m
            memory: "250Mi"
