eksctl/linuxtips/giropops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: giropops
  name: giropops
spec:
  replicas: 10
  selector:
    matchLabels:
      app: giropops
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: giropops
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
