eksctl/linuxtips/serviceapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
